# RevilLib

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  RevilLib.sln  RevilLib.vcxproj  RevilLib.vcxproj.filters  doc_template.xml
.github/workflows/: build.yaml  cmake.yml  release.yaml
SPACConvert/: CMakeLists.txt  SPACConvert.cpp
arc_conv/: CMakeLists.txt  arc_conv.cpp  arc_conv.hpp  extract_arc.cpp  make_arc.cpp
classgen/: CMakeLists.txt  base.py  lmt.py
classgen/mtf_lmt/: animation.py  bone_track.py  event.py  float_track.py
classgen/reng/: motion.py
database/: .gitignore  CMakeLists.txt  make_db.cpp
database/data/: dd.ini  ddon.ini  dgs.ini  dgs2.ini  dmc4.ini  dr.ini  ext.ini  lp.ini  lp2.ini  mh3.ini  mh4.ini  mhg.ini  mhs.ini  mhs2.ini  mhxr.ini  pwaadd.ini  pwaasoj.ini  re0.ini  re5.ini  re6.ini  recv.ini  rem.ini  rer.ini  sb3.ini  sb4.ini  sb4s.ini  sbsh.ini  sbsyd.ini  umvc3.ini
database/include/: database.hpp
ddon_sngw/: CMakeLists.txt  ddon_sngw.cpp
dev/: CMakeLists.txt  validate_arcs.cpp
include/: LMT.h  LMTDecode.h  REAsset.h  lmt.hpp  re_asset.hpp  re_common.hpp  uni_list.hpp  uni_list_vector.hpp  uni_motion.hpp  uni_skeleton.hpp  uni_virtual_iterator.hpp
include/revil/: arc.hpp  cdf.hpp  hashreg.hpp  hit.hpp  lmt.hpp  mod.hpp  mot.hpp  oba.hpp  osf.hpp  platform.hpp  re_asset.hpp  scs.hpp  sdl.hpp  sds.hpp  settings.hpp  srd.hpp  srq.hpp  stq.hpp  tex.hpp  types.hpp  xfs.hpp
lmt_to_gltf/: CMakeLists.txt  lmt_to_gltf.cpp  lmt_to_json.cpp
mod_to_gltf/: CMakeLists.txt  mod_to_gltf.cpp
mtf_tex_convert/: CMakeLists.txt  tex_convert.cpp
obb_extract/: CMakeLists.txt
re_tex_convert/: CMakeLists.txt  tex_convert.cpp
re_to_gltf/: CMakeLists.txt  reasset_to_gltf.cpp
spac_conv/: CMakeLists.txt  spac_conv.cpp
src/: CMakeLists.txt  LMT.cpp  LMTAnimation.cpp  LMTAnimation.h  LMTBoneTrack.cpp  LMTBoneTrack.h  LMTCodecs.cpp  LMTCodecs.h  LMTDecode.h  LMTDecoders.cpp  LMTEvent.cpp  LMTEvent.h  LMTFixupStorage.h  LMTFloatTrack.cpp  LMTFloatTrack.h  LMTInternal.h  LMTSerialize.cpp  LMTXML.cpp  REAsset.cpp  arc.cpp  arc.hpp  cdf.cpp  hash.cpp  hashreg.cpp  hfs.hpp  hit.cpp  mod.cpp  oba.cpp  osf.cpp  property.hpp  scs.cpp  sdl.cpp  sds.cpp  shape_node.hpp  shift_jis.inl  srd.cpp  srq.cpp  stq.cpp  tex.cpp  xfs.cpp
src/mtf_arc/: arc.hpp  classes.cpp  ext_base.hpp  ext_dd.hpp  ext_ddon.hpp  ext_dgs.hpp  ext_dgs2.hpp  ext_dmc4.hpp  ext_dr.hpp  ext_ext.hpp  ext_lp.hpp  ext_lp2.hpp  ext_mh3.hpp  ext_mh4.hpp  ext_mhg.hpp  ext_mhs.hpp  ext_mhs2.hpp  ext_mhxr.hpp  ext_pwaadd.hpp  ext_pwaasoj.hpp  ext_re0.hpp  ext_re5.hpp  ext_re6.hpp  ext_recv.hpp  ext_rem.hpp  ext_rer.hpp  ext_sb3.hpp  ext_sb4.hpp  ext_sb4s.hpp  ext_sbsh.hpp  ext_sbsyd.hpp  ext_umvc3.hpp  hashreg.cpp  supp_base.hpp  titles.cpp  util_scan_vfs.hpp
src/mtf_lmt/: animation.cpp  animation.hpp  animation.inl  bone_track.cpp  bone_track.hpp  bone_track.inl  codecs.cpp  codecs.hpp  decoders.cpp  decoders.hpp  event.cpp  event.hpp  event.inl  fixup_storage.hpp  float_track.cpp  float_track.hpp  float_track.inl  internal.hpp  lmt.cpp  lmt.inl  serialize.cpp  xml.cpp
src/mtf_mod/: bones.hpp  common.cpp  common.hpp  header.hpp  material.cpp  material.hpp  mesh.hpp  serialize.cpp  traits.hpp  xml.cpp
src/reng/: asset.cpp  asset.hpp  codecs.cpp  motion.cpp  motion.hpp  motion_43.cpp  motion_43.hpp  motion_458.cpp  motion_458.hpp  motion_65.cpp  motion_65.hpp  motion_78.cpp  motion_78.hpp  motion_list.cpp  motion_list.hpp  motion_list_486.cpp  motion_list_486.hpp  motion_list_528.hpp  motion_list_60.cpp  motion_list_60.hpp  motion_list_85.cpp  motion_list_85.hpp  motion_list_99.cpp  motion_list_99.hpp  pointer.hpp  registry.cpp
test/: .gitignore  CMakeLists.txt  LMTCodecsTesting.cpp  arc7.cpp  lmt_codecs.inl  test.cpp
test/resources_lmt/: CMakeLists.txt  anim.xml.tmpl  animlink.xml.tmpl  eventgroup.xml  main.xml.tmpl  track_hermite.xml.tmpl  track_lin_vector3.xml.tmpl  track_lin_vector4.xml.tmpl  track_raw.xml.tmpl  track_vector3.xml.tmpl  track_vector4.xml.tmpl
toolset/: .gitmodules  CMakeLists.txt  README.md  doc_template.xml  sign_key.asc
toolset/.github/workflows/: build.yaml
toolset/arc_conv/: CMakeLists.txt  arc_conv.hpp  extract_arc.cpp  make_arc.cpp
toolset/binary/: CMakeLists.txt  bin_to_xml.cpp  xml_to_bin.cpp
toolset/ddon_sngw/: CMakeLists.txt  ddon_sngw.cpp
toolset/dev/: CMakeLists.txt  dwm_to_gltf.cpp  lmt_bones.cpp  validate_arcs.cpp
toolset/dev/sbk/: sbk_to_json.cpp
toolset/dev/stq/: stq_to_json.cpp
toolset/dlc_extract/: CMakeLists.txt  dlc_extract.cpp
toolset/fpk_extract/: CMakeLists.txt  fpk_extract.cpp
toolset/include/: re_common.hpp
toolset/lmt_to_gltf/: CMakeLists.txt  animengine.cpp  animengine.hpp  lmt_to_gltf.cpp  lmt_to_json.cpp
toolset/mod_to_gltf/: CMakeLists.txt  dwm_to_gltf.cpp  mod_to_gltf.cpp
toolset/mtf_tex_convert/: CMakeLists.txt  tex_convert.cpp
toolset/obb_extract/: CMakeLists.txt  mhs.files  obb_extract.cpp
toolset/re_tex_convert/: CMakeLists.txt  tex_convert.cpp
toolset/re_to_gltf/: CMakeLists.txt  reasset_to_gltf.cpp
toolset/sbk/: CMakeLists.txt  sbk_to_json.cpp
toolset/sdl_conv/: CMakeLists.txt  sdl_to_xml.cpp  xml_to_sdl.cpp
toolset/spac_conv/: CMakeLists.txt  spac_conv.cpp
toolset/stq/: CMakeLists.txt  stq_to_json.cpp
toolset/udas_extract/: CMakeLists.txt  udas_extract.cpp
toolset/xfs_conv/: CMakeLists.txt  xfs_to_xml.cpp
udas_extract/: CMakeLists.txt
xfs_conv/: CMakeLists.txt  xfs_to_xml.cpp
