project(RevilToolset)
set_target_properties(spike_cli PROPERTIES OUTPUT_NAME revil_toolset)
target_link_libraries(spike_cli revil-objects)

include(targetex)
include(version)
toolset_version()

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)

# if (UNIX)
#     if (EXISTS minivgmstream)
#         message("Downloading minivgmstream")
#         file(DOWNLOAD https://github.com/PredatorCZ/minivgmstream/releases/download/<VERSION>/minivgmstream-linux-amd64.tar.xz minivgmstream)
#         file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/vgmstream)
#         execute_process(COMMAND ${CMAKE_COMMAND} -E tar x ../minivgmstream WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/vgmstream)
#     endif()
# 
#     add_library(libvgmstream INTERFACE)
#     target_include_directories(libvgmstream INTERFACE ${CMAKE_BINARY_DIR}/vgmstream/include)
#     target_link_directories(libvgmstream INTERFACE ${CMAKE_BINARY_DIR}/vgmstream/lib)
#     target_link_libraries(libvgmstream INTERFACE vgmstream)
# endif()

add_spike_subdir(spac_conv)
add_spike_subdir(re_tex_convert)
add_spike_subdir(arc_conv)
add_spike_subdir(ddon_sngw)
add_spike_subdir(re_to_gltf)
add_spike_subdir(mod_to_gltf)
add_spike_subdir(mtf_tex_convert)
add_spike_subdir(xfs_conv)
add_spike_subdir(udas_extract)
add_spike_subdir(obb_extract)
add_spike_subdir(lmt_to_gltf)
add_spike_subdir(sbk)
add_spike_subdir(stq)
add_spike_subdir(sdl_conv)

if(NOT ${CMAKE_BUILD_TYPE} STREQUAL "Release")
    add_spike_subdir(dev)
endif()
